src/objects/GetFeedback_Aut__Response__c.object
<CustomObject>
    <fields>
        <fullName>GetFeedback_Aut__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__GetFeedbackId__c</fullName>
        <externalId>true</externalId>
        <label>GetFeedback Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__Language__c</fullName>
        <label>Language</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__SurveyId__c</fullName>
        <formula>GetFeedback_Aut__Survey__r.GetFeedback_Aut__GetFeedbackId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>GetFeedback_Aut__Survey__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Response</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>